RESOLVED FIXED238421
[LFC][IFC] ASSERTs in BoxGeometry when loading Twitter page
https://bugs.webkit.org/show_bug.cgi?id=238421
Summary [LFC][IFC] ASSERTs in BoxGeometry when loading Twitter page
alan
Reported 2022-03-26 16:03:07 PDT
Attachments
Patch (5.44 KB, patch)
2022-03-26 16:21 PDT, alan
no flags
alan
Comment 1 2022-03-26 16:21:33 PDT
EWS
Comment 2 2022-03-27 07:24:56 PDT
Committed r291951 (248918@main): <https://commits.webkit.org/248918@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455858 [details].
Note You need to log in before you can comment on or make changes to this bug.