[LFC][IFC] ASSERTs in BoxGeometry when loading Twitter page https://bugs.webkit.org/show_bug.cgi?id=238421 <rdar://89980547>

Reviewed by Antti Koivisto.

Source/WebCore:

Ensure that we set size/position on trailing, empty inline box(es) in bidi context.
e.g.
<div>some content<span> <-line breaks here</span></div>

where the first line has the following runs:
  [some content]
  [inline box start]

second line has:
  [spanning inline box start]
  [<-line breaks here]
  [inline box end]

The first line's trailing (and empty, due to trailing whitespace trimming) [inline box start] run
needs computed geometry/display box so that when on the subsequent line we see the [spanning inline box start] run
we can properly compute the enclosing geometry for the <span> element.
(and that's where we currently assert as we don't find the associated box geometry for the inline box on the first line.)

See the comment in InlineDisplayContentBuilder::processBidiContent for details.
(Note that this change has no visual impact as these trailing inline boxes are always empty.)

Test: fast/inline/trailing-empty-bidi-inline-box.html

* layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):

LayoutTests:

* fast/inline/trailing-empty-bidi-inline-box-expected.txt: Added.
* fast/inline/trailing-empty-bidi-inline-box.html: Added.



Canonical link: https://commits.webkit.org/248918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291951 268f45cc-cd09-0410-ab3c-d52691b4dbfc